src/objects/ACED_Programs__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Cost__c</fullName>
        <label># Actual Cost</label>
        <summarizedField>ACED_Activity__c.Actual_Costs__c</summarizedField>
        <summaryForeignKey>ACED_Activity__c.Program__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Actual_eInt__c</fullName>
        <label># Actual eInt</label>
        <summarizedField>ACED_Activity__c.Actual_eInt__c</summarizedField>
        <summaryForeignKey>ACED_Activity__c.Program__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Affiliate__c</fullName>
        <inlineHelpText>Affiliate this Program is implemented for</inlineHelpText>
        <label>Affiliate</label>
        <picklist>
            <controllingField>HUB__c</controllingField>
            <picklistValues>
                <fullName>ACE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Croatia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cyprus &amp; Malta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denmark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greece</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hungary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Macedonia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montengro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netherlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Norway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portugal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Romania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Serbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slovakia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slovenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Asset_Activity__c</fullName>
        <inlineHelpText>This is a helptext for # Asset/Activity</inlineHelpText>
        <label># Asset/Activity</label>
        <summaryForeignKey>ACED_Activity__c.Program__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Brand_Indications__c</fullName>
        <inlineHelpText>This is a helptext for # Brand Indications</inlineHelpText>
        <label># of Brand Indications</label>
        <summaryForeignKey>ACED_Program_Indication__c.Program__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Business_Function__c</fullName>
        <inlineHelpText>Business Function this Program is owned by</inlineHelpText>
        <label>Business Function</label>
        <picklist>
            <picklistValues>
                <fullName>Corporate Affairs</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Load_Id__c</fullName>
        <label>Data Load Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_eInt__c</fullName>
        <label># Estimated eInt</label>
        <summarizedField>ACED_Activity__c.Estimated_eInt__c</summarizedField>
        <summaryForeignKey>ACED_Activity__c.Program__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>HUB__c</fullName>
        <inlineHelpText>HUB this Program is owned by</inlineHelpText>
        <label>HUB</label>
        <picklist>
            <picklistValues>
                <fullName>ACE HUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia HUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada HUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France HUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany HUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy HUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain HUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK HUB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Indication_Details__c</fullName>
        <description>Stores all the brand indication names separated by a comma</description>
        <inlineHelpText>Stores all the brand indication names seperated by a comma</inlineHelpText>
        <label>Indication Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>My_Programs__c</fullName>
        <description>This is a backend field that will be used in List views</description>
        <formula>if(TEXT(HUB__c) =  TEXT($User.ACED_HUB__c) ||  TEXT($User.ACED_HUB__c) =&apos;ACE HUB&apos;,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Will show true if the program is of the same HUB</inlineHelpText>
        <label>My Programs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Planned_Cost__c</fullName>
        <label># Planned Cost</label>
        <summarizedField>ACED_Activity__c.Planned_Cost__c</summarizedField>
        <summaryForeignKey>ACED_Activity__c.Program__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Program_Description__c</fullName>
        <inlineHelpText>Description, in English, on what this program is about, its objectives, and any other details that help to define the purpose and describe it to viewers of the information</inlineHelpText>
        <label>Program Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Regional_Program_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Regional program this local program is a localization of</inlineHelpText>
        <label>Regional Program Assignment</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ACED_Programs__c.Regional_Program__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Only regional programs are displayed</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ACED_Programs__c</referenceTo>
        <relationshipLabel>Related Programs</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Regional_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tick this box if this program is an Affiliate&apos;s localization of a regional or global program</inlineHelpText>
        <label>Regional Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <inlineHelpText>Global if the program is a Corporate wide program, Regional if this program is designed to be localized by affiliates in ACE or Local if the program is designed for one individual affiliate</inlineHelpText>
        <label>Scope</label>
        <picklist>
            <controllingField>Regional_Program__c</controllingField>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StandAlone_Asset_Program_TF__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is a helptext for StandAlone Program Flag_TF</inlineHelpText>
        <label>StandAlone Program Flag_TF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StandAlone_Asset_Upsert_TF__c</fullName>
        <description>Only Hub name will be unique since each hub will have one program</description>
        <externalId>true</externalId>
        <inlineHelpText>This is a helptext for StandAlone Asset Upsert_TF</inlineHelpText>
        <label>StandAlone Asset Upsert_TF</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <inlineHelpText>The year of the plan this program is going to be launch and tracked</inlineHelpText>
        <label>Year</label>
        <picklist>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Program</label>
    <listViews>
        <fullName>All_Programs</fullName>
        <columns>NAME</columns>
        <columns>Year__c</columns>
        <columns>HUB__c</columns>
        <columns>Affiliate__c</columns>
        <columns>Business_Function__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Programs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Regional_Programs</fullName>
        <columns>NAME</columns>
        <columns>Year__c</columns>
        <columns>HUB__c</columns>
        <columns>Affiliate__c</columns>
        <columns>Business_Function__c</columns>
        <columns>Actual_eInt__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Regional_Program__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Regional Programs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Brand</fullName>
        <columns>NAME</columns>
        <columns>Year__c</columns>
        <columns>HUB__c</columns>
        <columns>Affiliate__c</columns>
        <columns>Program_Description__c</columns>
        <columns>Business_Function__c</columns>
        <columns>Estimated_eInt__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>My_Programs__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Indication_Details__c</field>
            <operation>contains</operation>
        </filters>
        <label>2. Brand</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Brand_Indication</fullName>
        <columns>NAME</columns>
        <columns>Year__c</columns>
        <columns>HUB__c</columns>
        <columns>Affiliate__c</columns>
        <columns>Business_Function__c</columns>
        <columns>Program_Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>My_Programs__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Indication_Details__c</field>
            <operation>contains</operation>
        </filters>
        <label>3. Brand Indication</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Business_Function</fullName>
        <columns>NAME</columns>
        <columns>Year__c</columns>
        <columns>Affiliate__c</columns>
        <columns>HUB__c</columns>
        <columns>Business_Function__c</columns>
        <columns>Program_Description__c</columns>
        <columns>Estimated_eInt__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>My_Programs__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Indication_Details__c</field>
            <operation>contains</operation>
        </filters>
        <label>4. Business Function</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Business_Unit</fullName>
        <columns>NAME</columns>
        <columns>Year__c</columns>
        <columns>HUB__c</columns>
        <columns>Affiliate__c</columns>
        <columns>Program_Description__c</columns>
        <columns>Actual_eInt__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>My_Programs__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Indication_Details__c</field>
            <operation>equals</operation>
        </filters>
        <label>5. Business Unit</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_HUB_Programs</fullName>
        <columns>NAME</columns>
        <columns>Year__c</columns>
        <columns>HUB__c</columns>
        <columns>Affiliate__c</columns>
        <columns>Business_Function__c</columns>
        <columns>Estimated_eInt__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>My_Programs__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>1. My HUB Programs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_HUB_Regional_Programs</fullName>
        <columns>NAME</columns>
        <columns>Year__c</columns>
        <columns>HUB__c</columns>
        <columns>Affiliate__c</columns>
        <columns>Business_Function__c</columns>
        <columns>Actual_eInt__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>My_Programs__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Regional_Program__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My HUB Regional Programs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Therapeutic_Area</fullName>
        <columns>NAME</columns>
        <columns>Year__c</columns>
        <columns>HUB__c</columns>
        <columns>Affiliate__c</columns>
        <columns>Program_Description__c</columns>
        <columns>Actual_eInt__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>My_Programs__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Indication_Details__c</field>
            <operation>contains</operation>
        </filters>
        <label>6. Therapeutic Area</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programs</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ACED_Program_Hub_Matching</fullName>
        <active>true</active>
        <description>User can only select Hub to which he belongs.</description>
        <errorConditionFormula>AND((TEXT($User.ACED_HUB__c)&lt;&gt;&apos;ACE HUB&apos;),IF(TEXT(HUB__c)&lt;&gt; TEXT($User.ACED_HUB__c),TRUE,FALSE))</errorConditionFormula>
        <errorDisplayField>HUB__c</errorDisplayField>
        <errorMessage>You cannot select Hub which you are not part of</errorMessage>
    </validationRules>
</CustomObject>